--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.28",
     "bulma": "0.6.2",
+    "graphql": "^14.1.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2"
